Bug 249007 - Encoding errors in KOrganizer
Summary: Encoding errors in KOrganizer
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-25 16:33 UTC by Sascha L. Teichmann
Modified: 2010-09-10 02:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the encoding errors in KOrg (24.88 KB, image/png)
2010-08-25 16:36 UTC, Sascha L. Teichmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sascha L. Teichmann 2010-08-25 16:33:00 UTC
Version:           unspecified
OS:                Linux

$ dpkg -s korganizer | grep Version
Version: 4:4.5~e5.20100820.1165966-kk1.1167412

If an event is entered in KOrganizer (E5 build) containing
Umlauts they are displayed with encoding errors.

Reproducible: Always
Comment 1 Sascha L. Teichmann 2010-08-25 16:36:35 UTC
Created attachment 50942 [details]
Screenshot of the encoding errors in KOrg

See screenshot
Comment 2 Sergio Martins 2010-09-10 02:02:00 UTC
SVN commit 1173657 by smartins:

Fix encoding problems.

In the call to: mFormat.fromString( data.readAll() ):

- data.readAll() returns a QByteArray with UTF-8 content.
- fromString receives a QString.
- ctor QString( const QByteArray & ) is called, which assumes the buffer is latin1.

BUG: 249007

 M  +1 -1      akonadi_serializer_kcalcore.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1173657