Fix encoding problems.

In the call to: mFormat.fromString( data.readAll() ):

- data.readAll() returns a QByteArray with UTF-8 content.
- fromString receives a QString.
- ctor QString( const QByteArray & ) is called, which assumes the buffer is latin1.

BUG: 249007

svn path=/trunk/KDE/kdepim/runtime/; revision=1173657